# rel-kurzumfrage

./: README.md  docker-compose.yml
.github/workflows/: service.yml  static.yml
service/: .env  Cargo.toml  Dockerfile  build.rs  postgres.crt
service/migrations/2023-07-03-182221_locations/: up.sql
service/src/: main.rs  schema.rs
web/: package-lock.json  package.json
web/public/: index.html
web/src/: error.tsx  index.css  index.tsx
web/src/data/: http.ts  localstore.ts
web/src/data/api/: location.ts  vote.ts
web/src/data/dto/: location.ts
web/src/data/local/: voted-locations.ts
web/src/routes/: root.tsx
web/src/routes/qr-codes/: qr-codes.tsx
web/src/routes/vote/: vote.tsx
web/src/routes/voted/: voted.tsx
