[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.5"
tokio = { version = "1.29.1", features = ["full"] }
log = "0.4.0"
env_logger = "0.10.0"
diesel = { version = "2.1.0", features = ["uuid", "postgres"] }
diesel-async = { version = "0.3.1", features = ["postgres", "deadpool"] }
deadpool = "0.9.5"
dotenvy = "0.15"
diesel_migrations = "2.1.0"
uuid = { version = "1.4.0", features = ["serde", "v4"] }
serde = "1.0.171"
anyhow = { version = "1.0.71", features = ["backtrace"] }
rustls = "0.21.5"
rustls-native-certs = "0.6.2"
tokio-postgres = "0.7.7"
tokio-postgres-rustls = "0.10.0"
futures-util = "0.3.21"